force-app/main/default/objects/Payment__c/fields/Capture_Sale_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Capture_Sale_Transaction__c</fullName>
    <inlineHelpText>Worldpay Id for the credit card transaction</inlineHelpText>
    <label>Capture/Sale Transaction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>