force-app/main/default/objects/Payment__c/fields/Original_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If record is a refund, the approved payment that was refunded</inlineHelpText>
    <label>Original Payment Id</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>