force-app/main/default/objects/Payment__c/fields/Payment_Stopped_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Stopped_Date__c</fullName>
    <description>The date that payment was stopped on this particular Payment.</description>
    <inlineHelpText>Date this payment was cancelled or rejected by Worldpay (if blank, payment is either pending or successful)</inlineHelpText>
    <label>Payment Stopped Date</label>
    <type>Date</type>
</CustomField>