force-app/main/default/objects/Payment__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <inlineHelpText>Date a payment was processed by Worldpay (if blank, transaction has not yet occurred)</inlineHelpText>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>