force-app/main/default/objects/Payment__c/fields/Scheduled_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Post_Date__c</fullName>
    <inlineHelpText>Date a payment is scheduled to be processed by Worldpay</inlineHelpText>
    <label>Scheduled Post Date</label>
    <type>Date</type>
</CustomField>