force-app/main/default/objects/Payment__c/fields/Worldpay_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_Order_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Worldpay unique identifier</inlineHelpText>
    <label>Worldpay Order Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>