force-app/main/default/objects/Payment__c/fields/Worldpay_Token__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_Token__c</fullName>
    <inlineHelpText>The tokenized credit card number associated with this payment</inlineHelpText>
    <label>Worldpay Token</label>
    <length>30</length>
    <type>Text</type>
</CustomField>