force-app/main/default/objects/Payment__c/listViews/All_Payments.listView-meta.xml
<ListView>
    <fullName>All_Payments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Scheduled_Post_Date__c</columns>
    <columns>Post_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>