force-app/main/default/objects/Payment__c/listViews/Cancelled_Payments.listView-meta.xml
<ListView>
    <fullName>Cancelled_Payments</fullName>
    <columns>Payment_Stopped_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Scheduled_Post_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Payments</label>
</ListView>