force-app/main/default/objects/Payment__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>Scheduled_Post_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Payments</label>
</ListView>