force-app/main/default/objects/Payment__c/listViews/Refunded_Payments.listView-meta.xml
<ListView>
    <fullName>Refunded_Payments</fullName>
    <columns>Post_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Refunded</value>
    </filters>
    <label>Refunded Payments</label>
</ListView>